<?xml version="1.0"?>
<package format="2">

  <name>robotiq_gazebo</name>
  <version>0.1.0</version>
  <description>
    Gazebo wrapper for the Robotiq 85 gripper
  </description>
  
  <maintainer email="oramos@utec.edu.pe">oramos</maintainer>
  <author email="oramos@utec.edu.pe">oramos</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robotiq_description</exec_depend>

</package>
